platform-products/networking/kgateway-mcp/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: shared-mcp-kgateway
  namespace: kgateway-system
spec:
  gatewayClassName:  agentgateway
  listeners:
    - protocol: kgateway.dev/mcp
      port: 3000
      name: mcp
      allowedRoutes:
        namespaces:
          from: All
    - protocol: kgateway.dev/a2a
      port: 9090
      name: a2a
      allowedRoutes:
        namespaces:
          from: All
